// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly in full size with first page selected 1`] = `
.c2 {
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0 2px 1px;
  border-bottom: 2px solid;
  border-bottom-color: #000;
}

.c0 ul {
  display: inline-block;
  list-style-type: none;
}

.c0 li {
  float: left;
  padding: 10px;
}

.c1.link {
  padding: 9px 14px 9px 14px;
  border-radius: 30px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0px;
  font-weight: 700;
}

.c1.link--disabled,
.c1.link--morePagesBefore,
.c1.link--morePagesAfter {
  cursor: default;
  background: #FFFFFF;
  color: #c7c7c7;
}

.c1.link--selected {
  cursor: default;
  background: #f04257;
  color: #FFFFFF;
}

<div
  className="c0"
>
  <ul
    className="list"
  >
    <li
      className="item  item--disabled item--firstPage"
    >
      <a
        aria-label="First page"
        className="link  link--disabled link--firstPage c1 c2"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        «
      </a>
    </li>
    <li
      className="item  item--disabled item--previousPage"
    >
      <a
        aria-label="Previous page"
        className="link  link--disabled link--previousPage c1 c2"
        color="red"
        href="example.com/page/0"
        onClick={[Function]}
        target="_self"
      >
        ‹
      </a>
    </li>
    <li
      className="item item--selected  item--page"
    >
      <a
        aria-label="Page 1"
        className="link link--selected  link--page c1 c2"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        1
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 2"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/2"
        onClick={[Function]}
        target="_self"
      >
        2
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 3"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/3"
        onClick={[Function]}
        target="_self"
      >
        3
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 4"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/4"
        onClick={[Function]}
        target="_self"
      >
        4
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 5"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        5
      </a>
    </li>
    <li
      className="item   item--nextPage"
    >
      <a
        aria-label="Next page"
        className="link   link--nextPage c1 c2"
        color="red"
        href="example.com/page/2"
        onClick={[Function]}
        target="_self"
      >
        ›
      </a>
    </li>
    <li
      className="item   item--lastPage"
    >
      <a
        aria-label="Last page"
        className="link   link--lastPage c1 c2"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        »
      </a>
    </li>
  </ul>
</div>
`;

exports[`renders correctly in full size with last page selected 1`] = `
.c2 {
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0 2px 1px;
  border-bottom: 2px solid;
  border-bottom-color: #000;
}

.c0 ul {
  display: inline-block;
  list-style-type: none;
}

.c0 li {
  float: left;
  padding: 10px;
}

.c1.link {
  padding: 9px 14px 9px 14px;
  border-radius: 30px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0px;
  font-weight: 700;
}

.c1.link--disabled,
.c1.link--morePagesBefore,
.c1.link--morePagesAfter {
  cursor: default;
  background: #FFFFFF;
  color: #c7c7c7;
}

.c1.link--selected {
  cursor: default;
  background: #f04257;
  color: #FFFFFF;
}

<div
  className="c0"
>
  <ul
    className="list"
  >
    <li
      className="item   item--firstPage"
    >
      <a
        aria-label="First page"
        className="link   link--firstPage c1 c2"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        «
      </a>
    </li>
    <li
      className="item   item--previousPage"
    >
      <a
        aria-label="Previous page"
        className="link   link--previousPage c1 c2"
        color="red"
        href="example.com/page/4"
        onClick={[Function]}
        target="_self"
      >
        ‹
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 1"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        1
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 2"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/2"
        onClick={[Function]}
        target="_self"
      >
        2
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 3"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/3"
        onClick={[Function]}
        target="_self"
      >
        3
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 4"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/4"
        onClick={[Function]}
        target="_self"
      >
        4
      </a>
    </li>
    <li
      className="item item--selected  item--page"
    >
      <a
        aria-label="Page 5"
        className="link link--selected  link--page c1 c2"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        5
      </a>
    </li>
    <li
      className="item  item--disabled item--nextPage"
    >
      <a
        aria-label="Next page"
        className="link  link--disabled link--nextPage c1 c2"
        color="red"
        href="example.com/page/6"
        onClick={[Function]}
        target="_self"
      >
        ›
      </a>
    </li>
    <li
      className="item  item--disabled item--lastPage"
    >
      <a
        aria-label="Last page"
        className="link  link--disabled link--lastPage c1 c2"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        »
      </a>
    </li>
  </ul>
</div>
`;

exports[`renders correctly in full size with max pages less than current page 1`] = `
.c2 {
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0 2px 1px;
  border-bottom: 2px solid;
  border-bottom-color: #000;
}

.c0 ul {
  display: inline-block;
  list-style-type: none;
}

.c0 li {
  float: left;
  padding: 10px;
}

.c1.link {
  padding: 9px 14px 9px 14px;
  border-radius: 30px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0px;
  font-weight: 700;
}

.c1.link--disabled,
.c1.link--morePagesBefore,
.c1.link--morePagesAfter {
  cursor: default;
  background: #FFFFFF;
  color: #c7c7c7;
}

.c1.link--selected {
  cursor: default;
  background: #f04257;
  color: #FFFFFF;
}

<div
  className="c0"
>
  <ul
    className="list"
  >
    <li
      className="item   item--firstPage"
    >
      <a
        aria-label="First page"
        className="link   link--firstPage c1 c2"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        «
      </a>
    </li>
    <li
      className="item   item--previousPage"
    >
      <a
        aria-label="Previous page"
        className="link   link--previousPage c1 c2"
        color="red"
        href="example.com/page/18"
        onClick={[Function]}
        target="_self"
      >
        ‹
      </a>
    </li>
    <li
      className="item  item--disabled item--morePagesBefore"
    >
      <a
        aria-label="More pages"
        className="link  link--disabled link--morePagesBefore c1 c2"
        color="red"
        href="example.com/page/0"
        onClick={[Function]}
        target="_self"
      >
        ...
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 16"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/16"
        onClick={[Function]}
        target="_self"
      >
        16
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 17"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/17"
        onClick={[Function]}
        target="_self"
      >
        17
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 18"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/18"
        onClick={[Function]}
        target="_self"
      >
        18
      </a>
    </li>
    <li
      className="item item--selected  item--page"
    >
      <a
        aria-label="Page 19"
        className="link link--selected  link--page c1 c2"
        color="red"
        href="example.com/page/19"
        onClick={[Function]}
        target="_self"
      >
        19
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 20"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/20"
        onClick={[Function]}
        target="_self"
      >
        20
      </a>
    </li>
    <li
      className="item   item--nextPage"
    >
      <a
        aria-label="Next page"
        className="link   link--nextPage c1 c2"
        color="red"
        href="example.com/page/20"
        onClick={[Function]}
        target="_self"
      >
        ›
      </a>
    </li>
    <li
      className="item   item--lastPage"
    >
      <a
        aria-label="Last page"
        className="link   link--lastPage c1 c2"
        color="red"
        href="example.com/page/20"
        onClick={[Function]}
        target="_self"
      >
        »
      </a>
    </li>
  </ul>
</div>
`;

exports[`renders correctly in full size with max pages less than total pages 1`] = `
.c2 {
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0 2px 1px;
  border-bottom: 2px solid;
  border-bottom-color: #000;
}

.c0 ul {
  display: inline-block;
  list-style-type: none;
}

.c0 li {
  float: left;
  padding: 10px;
}

.c1.link {
  padding: 9px 14px 9px 14px;
  border-radius: 30px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0px;
  font-weight: 700;
}

.c1.link--disabled,
.c1.link--morePagesBefore,
.c1.link--morePagesAfter {
  cursor: default;
  background: #FFFFFF;
  color: #c7c7c7;
}

.c1.link--selected {
  cursor: default;
  background: #f04257;
  color: #FFFFFF;
}

<div
  className="c0"
>
  <ul
    className="list"
  >
    <li
      className="item   item--firstPage"
    >
      <a
        aria-label="First page"
        className="link   link--firstPage c1 c2"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        «
      </a>
    </li>
    <li
      className="item   item--previousPage"
    >
      <a
        aria-label="Previous page"
        className="link   link--previousPage c1 c2"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        ‹
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 1"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        1
      </a>
    </li>
    <li
      className="item item--selected  item--page"
    >
      <a
        aria-label="Page 2"
        className="link link--selected  link--page c1 c2"
        color="red"
        href="example.com/page/2"
        onClick={[Function]}
        target="_self"
      >
        2
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 3"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/3"
        onClick={[Function]}
        target="_self"
      >
        3
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 4"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/4"
        onClick={[Function]}
        target="_self"
      >
        4
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 5"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        5
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 6"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/6"
        onClick={[Function]}
        target="_self"
      >
        6
      </a>
    </li>
    <li
      className="item  item--disabled item--morePagesAfter"
    >
      <a
        aria-label="More pages"
        className="link  link--disabled link--morePagesAfter c1 c2"
        color="red"
        href="example.com/page/0"
        onClick={[Function]}
        target="_self"
      >
        ...
      </a>
    </li>
    <li
      className="item   item--nextPage"
    >
      <a
        aria-label="Next page"
        className="link   link--nextPage c1 c2"
        color="red"
        href="example.com/page/3"
        onClick={[Function]}
        target="_self"
      >
        ›
      </a>
    </li>
    <li
      className="item   item--lastPage"
    >
      <a
        aria-label="Last page"
        className="link   link--lastPage c1 c2"
        color="red"
        href="example.com/page/10"
        onClick={[Function]}
        target="_self"
      >
        »
      </a>
    </li>
  </ul>
</div>
`;

exports[`renders correctly in full size with max pages more than total pages 1`] = `
.c2 {
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0 2px 1px;
  border-bottom: 2px solid;
  border-bottom-color: #000;
}

.c0 ul {
  display: inline-block;
  list-style-type: none;
}

.c0 li {
  float: left;
  padding: 10px;
}

.c1.link {
  padding: 9px 14px 9px 14px;
  border-radius: 30px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0px;
  font-weight: 700;
}

.c1.link--disabled,
.c1.link--morePagesBefore,
.c1.link--morePagesAfter {
  cursor: default;
  background: #FFFFFF;
  color: #c7c7c7;
}

.c1.link--selected {
  cursor: default;
  background: #f04257;
  color: #FFFFFF;
}

<div
  className="c0"
>
  <ul
    className="list"
  >
    <li
      className="item   item--firstPage"
    >
      <a
        aria-label="First page"
        className="link   link--firstPage c1 c2"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        «
      </a>
    </li>
    <li
      className="item   item--previousPage"
    >
      <a
        aria-label="Previous page"
        className="link   link--previousPage c1 c2"
        color="red"
        href="example.com/page/3"
        onClick={[Function]}
        target="_self"
      >
        ‹
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 1"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        1
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 2"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/2"
        onClick={[Function]}
        target="_self"
      >
        2
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 3"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/3"
        onClick={[Function]}
        target="_self"
      >
        3
      </a>
    </li>
    <li
      className="item item--selected  item--page"
    >
      <a
        aria-label="Page 4"
        className="link link--selected  link--page c1 c2"
        color="red"
        href="example.com/page/4"
        onClick={[Function]}
        target="_self"
      >
        4
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 5"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        5
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 6"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/6"
        onClick={[Function]}
        target="_self"
      >
        6
      </a>
    </li>
    <li
      className="item   item--nextPage"
    >
      <a
        aria-label="Next page"
        className="link   link--nextPage c1 c2"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        ›
      </a>
    </li>
    <li
      className="item   item--lastPage"
    >
      <a
        aria-label="Last page"
        className="link   link--lastPage c1 c2"
        color="red"
        href="example.com/page/6"
        onClick={[Function]}
        target="_self"
      >
        »
      </a>
    </li>
  </ul>
</div>
`;

exports[`renders correctly in full size with more on both sides 1`] = `
.c2 {
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0 2px 1px;
  border-bottom: 2px solid;
  border-bottom-color: #000;
}

.c0 ul {
  display: inline-block;
  list-style-type: none;
}

.c0 li {
  float: left;
  padding: 10px;
}

.c1.link {
  padding: 9px 14px 9px 14px;
  border-radius: 30px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0px;
  font-weight: 700;
}

.c1.link--disabled,
.c1.link--morePagesBefore,
.c1.link--morePagesAfter {
  cursor: default;
  background: #FFFFFF;
  color: #c7c7c7;
}

.c1.link--selected {
  cursor: default;
  background: #f04257;
  color: #FFFFFF;
}

<div
  className="c0"
>
  <ul
    className="list"
  >
    <li
      className="item   item--firstPage"
    >
      <a
        aria-label="First page"
        className="link   link--firstPage c1 c2"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        «
      </a>
    </li>
    <li
      className="item   item--previousPage"
    >
      <a
        aria-label="Previous page"
        className="link   link--previousPage c1 c2"
        color="red"
        href="example.com/page/3"
        onClick={[Function]}
        target="_self"
      >
        ‹
      </a>
    </li>
    <li
      className="item  item--disabled item--morePagesBefore"
    >
      <a
        aria-label="More pages"
        className="link  link--disabled link--morePagesBefore c1 c2"
        color="red"
        href="example.com/page/0"
        onClick={[Function]}
        target="_self"
      >
        ...
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 2"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/2"
        onClick={[Function]}
        target="_self"
      >
        2
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 3"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/3"
        onClick={[Function]}
        target="_self"
      >
        3
      </a>
    </li>
    <li
      className="item item--selected  item--page"
    >
      <a
        aria-label="Page 4"
        className="link link--selected  link--page c1 c2"
        color="red"
        href="example.com/page/4"
        onClick={[Function]}
        target="_self"
      >
        4
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 5"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        5
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 6"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/6"
        onClick={[Function]}
        target="_self"
      >
        6
      </a>
    </li>
    <li
      className="item  item--disabled item--morePagesAfter"
    >
      <a
        aria-label="More pages"
        className="link  link--disabled link--morePagesAfter c1 c2"
        color="red"
        href="example.com/page/0"
        onClick={[Function]}
        target="_self"
      >
        ...
      </a>
    </li>
    <li
      className="item   item--nextPage"
    >
      <a
        aria-label="Next page"
        className="link   link--nextPage c1 c2"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        ›
      </a>
    </li>
    <li
      className="item   item--lastPage"
    >
      <a
        aria-label="Last page"
        className="link   link--lastPage c1 c2"
        color="red"
        href="example.com/page/7"
        onClick={[Function]}
        target="_self"
      >
        »
      </a>
    </li>
  </ul>
</div>
`;

exports[`renders correctly in full size with more on left 1`] = `
.c2 {
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0 2px 1px;
  border-bottom: 2px solid;
  border-bottom-color: #000;
}

.c0 ul {
  display: inline-block;
  list-style-type: none;
}

.c0 li {
  float: left;
  padding: 10px;
}

.c1.link {
  padding: 9px 14px 9px 14px;
  border-radius: 30px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0px;
  font-weight: 700;
}

.c1.link--disabled,
.c1.link--morePagesBefore,
.c1.link--morePagesAfter {
  cursor: default;
  background: #FFFFFF;
  color: #c7c7c7;
}

.c1.link--selected {
  cursor: default;
  background: #f04257;
  color: #FFFFFF;
}

<div
  className="c0"
>
  <ul
    className="list"
  >
    <li
      className="item   item--firstPage"
    >
      <a
        aria-label="First page"
        className="link   link--firstPage c1 c2"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        «
      </a>
    </li>
    <li
      className="item   item--previousPage"
    >
      <a
        aria-label="Previous page"
        className="link   link--previousPage c1 c2"
        color="red"
        href="example.com/page/3"
        onClick={[Function]}
        target="_self"
      >
        ‹
      </a>
    </li>
    <li
      className="item  item--disabled item--morePagesBefore"
    >
      <a
        aria-label="More pages"
        className="link  link--disabled link--morePagesBefore c1 c2"
        color="red"
        href="example.com/page/0"
        onClick={[Function]}
        target="_self"
      >
        ...
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 2"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/2"
        onClick={[Function]}
        target="_self"
      >
        2
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 3"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/3"
        onClick={[Function]}
        target="_self"
      >
        3
      </a>
    </li>
    <li
      className="item item--selected  item--page"
    >
      <a
        aria-label="Page 4"
        className="link link--selected  link--page c1 c2"
        color="red"
        href="example.com/page/4"
        onClick={[Function]}
        target="_self"
      >
        4
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 5"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        5
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 6"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/6"
        onClick={[Function]}
        target="_self"
      >
        6
      </a>
    </li>
    <li
      className="item   item--nextPage"
    >
      <a
        aria-label="Next page"
        className="link   link--nextPage c1 c2"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        ›
      </a>
    </li>
    <li
      className="item   item--lastPage"
    >
      <a
        aria-label="Last page"
        className="link   link--lastPage c1 c2"
        color="red"
        href="example.com/page/6"
        onClick={[Function]}
        target="_self"
      >
        »
      </a>
    </li>
  </ul>
</div>
`;

exports[`renders correctly in full size with more on right 1`] = `
.c2 {
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0 2px 1px;
  border-bottom: 2px solid;
  border-bottom-color: #000;
}

.c0 ul {
  display: inline-block;
  list-style-type: none;
}

.c0 li {
  float: left;
  padding: 10px;
}

.c1.link {
  padding: 9px 14px 9px 14px;
  border-radius: 30px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0px;
  font-weight: 700;
}

.c1.link--disabled,
.c1.link--morePagesBefore,
.c1.link--morePagesAfter {
  cursor: default;
  background: #FFFFFF;
  color: #c7c7c7;
}

.c1.link--selected {
  cursor: default;
  background: #f04257;
  color: #FFFFFF;
}

<div
  className="c0"
>
  <ul
    className="list"
  >
    <li
      className="item   item--firstPage"
    >
      <a
        aria-label="First page"
        className="link   link--firstPage c1 c2"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        «
      </a>
    </li>
    <li
      className="item   item--previousPage"
    >
      <a
        aria-label="Previous page"
        className="link   link--previousPage c1 c2"
        color="red"
        href="example.com/page/2"
        onClick={[Function]}
        target="_self"
      >
        ‹
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 1"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        1
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 2"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/2"
        onClick={[Function]}
        target="_self"
      >
        2
      </a>
    </li>
    <li
      className="item item--selected  item--page"
    >
      <a
        aria-label="Page 3"
        className="link link--selected  link--page c1 c2"
        color="red"
        href="example.com/page/3"
        onClick={[Function]}
        target="_self"
      >
        3
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 4"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/4"
        onClick={[Function]}
        target="_self"
      >
        4
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 5"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        5
      </a>
    </li>
    <li
      className="item  item--disabled item--morePagesAfter"
    >
      <a
        aria-label="More pages"
        className="link  link--disabled link--morePagesAfter c1 c2"
        color="red"
        href="example.com/page/0"
        onClick={[Function]}
        target="_self"
      >
        ...
      </a>
    </li>
    <li
      className="item   item--nextPage"
    >
      <a
        aria-label="Next page"
        className="link   link--nextPage c1 c2"
        color="red"
        href="example.com/page/4"
        onClick={[Function]}
        target="_self"
      >
        ›
      </a>
    </li>
    <li
      className="item   item--lastPage"
    >
      <a
        aria-label="Last page"
        className="link   link--lastPage c1 c2"
        color="red"
        href="example.com/page/6"
        onClick={[Function]}
        target="_self"
      >
        »
      </a>
    </li>
  </ul>
</div>
`;

exports[`renders correctly in minimalist form 1`] = `
.c2 {
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0 2px 1px;
  border-bottom: 2px solid;
  border-bottom-color: #000;
}

.c0 ul {
  display: inline-block;
  list-style-type: none;
}

.c0 li {
  float: left;
  padding: 10px;
}

.c1.link {
  padding: 9px 14px 9px 14px;
  border-radius: 30px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0px;
  font-weight: 700;
}

.c1.link--disabled,
.c1.link--morePagesBefore,
.c1.link--morePagesAfter {
  cursor: default;
  background: #FFFFFF;
  color: #c7c7c7;
}

.c1.link--selected {
  cursor: default;
  background: #f04257;
  color: #FFFFFF;
}

<div
  className="c0"
>
  <ul
    className="list"
  >
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 1"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        1
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 2"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/2"
        onClick={[Function]}
        target="_self"
      >
        2
      </a>
    </li>
    <li
      className="item item--selected  item--page"
    >
      <a
        aria-label="Page 3"
        className="link link--selected  link--page c1 c2"
        color="red"
        href="example.com/page/3"
        onClick={[Function]}
        target="_self"
      >
        3
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 4"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/4"
        onClick={[Function]}
        target="_self"
      >
        4
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 5"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        5
      </a>
    </li>
  </ul>
</div>
`;

exports[`renders correctly in minimalist form with non-default color 1`] = `
.c2 {
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0 2px 1px;
  border-bottom: 2px solid;
  border-bottom-color: #000;
}

.c0 ul {
  display: inline-block;
  list-style-type: none;
}

.c0 li {
  float: left;
  padding: 10px;
}

.c1.link {
  padding: 9px 14px 9px 14px;
  border-radius: 30px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0px;
  font-weight: 700;
}

.c1.link--disabled,
.c1.link--morePagesBefore,
.c1.link--morePagesAfter {
  cursor: default;
  background: #FFFFFF;
  color: #c7c7c7;
}

.c1.link--selected {
  cursor: default;
  background: #22d2dc;
  color: #FFFFFF;
}

<div
  className="c0"
>
  <ul
    className="list"
  >
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 1"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        1
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 2"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/2"
        onClick={[Function]}
        target="_self"
      >
        2
      </a>
    </li>
    <li
      className="item item--selected  item--page"
    >
      <a
        aria-label="Page 3"
        className="link link--selected  link--page c1 c2"
        color="red"
        href="example.com/page/3"
        onClick={[Function]}
        target="_self"
      >
        3
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 4"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/4"
        onClick={[Function]}
        target="_self"
      >
        4
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 5"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        5
      </a>
    </li>
  </ul>
</div>
`;

exports[`renders correctly with custom labels 1`] = `
.c2 {
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0 2px 1px;
  border-bottom: 2px solid;
  border-bottom-color: #000;
}

.c0 ul {
  display: inline-block;
  list-style-type: none;
}

.c0 li {
  float: left;
  padding: 10px;
}

.c1.link {
  padding: 9px 14px 9px 14px;
  border-radius: 30px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 0px;
  font-weight: 700;
}

.c1.link--disabled,
.c1.link--morePagesBefore,
.c1.link--morePagesAfter {
  cursor: default;
  background: #FFFFFF;
  color: #c7c7c7;
}

.c1.link--selected {
  cursor: default;
  background: #f04257;
  color: #FFFFFF;
}

<div
  className="c0"
>
  <ul
    className="list"
  >
    <li
      className="item   item--firstPage"
    >
      <a
        aria-label="First page"
        className="link   link--firstPage c1 c2"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        First
      </a>
    </li>
    <li
      className="item   item--previousPage"
    >
      <a
        aria-label="Previous page"
        className="link   link--previousPage c1 c2"
        color="red"
        href="example.com/page/2"
        onClick={[Function]}
        target="_self"
      >
        Previous
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 1"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        Page 1
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 2"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/2"
        onClick={[Function]}
        target="_self"
      >
        Page 2
      </a>
    </li>
    <li
      className="item item--selected  item--page"
    >
      <a
        aria-label="Page 3"
        className="link link--selected  link--page c1 c2"
        color="red"
        href="example.com/page/3"
        onClick={[Function]}
        target="_self"
      >
        Page 3
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 4"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/4"
        onClick={[Function]}
        target="_self"
      >
        Page 4
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 5"
        className="link   link--page c1 c2"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        Page 5
      </a>
    </li>
    <li
      className="item   item--nextPage"
    >
      <a
        aria-label="Next page"
        className="link   link--nextPage c1 c2"
        color="red"
        href="example.com/page/4"
        onClick={[Function]}
        target="_self"
      >
        Next
      </a>
    </li>
    <li
      className="item   item--lastPage"
    >
      <a
        aria-label="Last page"
        className="link   link--lastPage c1 c2"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        Last
      </a>
    </li>
  </ul>
</div>
`;
